# crawler-service

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  coverage.json  index.py  pyproject.toml  requirements.txt  todos.txt
context_managers/: db_connection.py
db/schema/: 01_types.sql  02_tables.sql  03_data.sql  04_queries.sql
docs/: instruction.txt  python_packaging_2023.txt
docs/chat_gpt_qa/: infrastructure_builds_deps.txt  setup_production_ready_python_web_application_server.txt  wsgi_how_why.txt
docs/todos/: plan_minimum.txt  todos.txt
docs/ubuntu/: postgresql.txt
services/: db_service.py  logger_factory.py  scraped_data_processor.py  scraper_service.py
src/: index.py
src/context_managers/: db_connection.py
src/crawler_service/: __main__.py
src/crawler_service/context_managers/: db_connection.py  postgres_connection.py
src/crawler_service/db/schema/: 01_types.sql  02_tables.sql  04_queries.sql
src/crawler_service/services/: abstract_db_service.py  db_service.py  logger_factory.py  postgres_service.py  scraped_data_processor.py  scraper_service.py  scraping_manager.py
src/crawler_service/utils/: index.py
src/services/: db_service.py  scraper_service.py
src/utils/: index.py
tests/: test__main__.py  test_class.py  test_fixtures.py  test_module.py  test_sample.py
tests/context_managers/: test_postgres_connection.py
tests/services/: test_postgres_service.py  test_scraping_manager.py
tests/test_data/: service_config.json
tests/utils/: test_index.py
utils/: index.py
