[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler_service"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "selenium >= 4.15.2",
  "psycopg2 >= 2.9.9",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 88

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
